tmp-dev-full/objects/PointUploadJob__c/PointUploadJob__c.object-meta.xml
<CustomObject>
    <label>Point Upload Job</label>
    <nameField>
        <displayFormat>PUJ-{000000}</displayFormat>
        <label>Point Upload Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>