tmp-dev-full/objects/PointUploadJob__c/fields/BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>BatchJobId__c</fullName>
    <label>Batch Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>