tmp-dev-full/objects/PointUploadJob__c/fields/ContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionId__c</fullName>
    <label>Content Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>