tmp-dev-full/objects/PointUploadJob__c/fields/FailCount__c.field-meta.xml
<CustomField>
    <fullName>FailCount__c</fullName>
    <label>Fail Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>