tmp-dev-full/objects/PointUploadJob__c/fields/SubtypeId__c.field-meta.xml
<CustomField>
    <fullName>SubtypeId__c</fullName>
    <label>Subtype Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>