tmp-dev-full/objects/PointUploadJob__c/fields/SuccessCount__c.field-meta.xml
<CustomField>
    <fullName>SuccessCount__c</fullName>
    <label>Success Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>