tmp-dev-full/objects/PointUploadJob__c/fields/TotalCount__c.field-meta.xml
<CustomField>
    <fullName>TotalCount__c</fullName>
    <label>Total Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>